force-app/main/default/objects/Event_Connection__c/Event_Connection__c.object-meta.xml
<CustomObject>
    <label>Event Connection</label>
    <nameField>
        <displayFormat>EC{000000}</displayFormat>
        <label>Event Connection</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>