force-app/main/default/objects/Event_Connection__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Event Connections</relationshipLabel>
    <relationshipName>Event_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>