force-app/main/default/objects/Event_Connection__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Connections</relationshipLabel>
    <relationshipName>Event_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>